Added ability to set the environment for all grails commands and have it persist across command invocations.

--- a/info.plist
+++ b/info.plist
@@ -285,6 +285,8 @@
 		<string>9B67E226-4E45-4DDD-99FC-31545A67B7B9</string>
 		<string>90AF1D77-BD5E-454C-A5E0-D8B19DA4089A</string>
 		<string>DEFDA7D4-BB3B-47D4-9408-C63C7A901A97</string>
+		<string>A085D123-3C2B-4960-AC5B-0D576FE55F49</string>
+		<string>69E74F74-6AEC-43A3-9F82-580CD17DE40B</string>
 	</array>
 	<key>uuid</key>
 	<string>2536CAAD-FADB-4C08-B950-A7FAAD24A738</string>
