add namedQuery snippet

--- a/info.plist
+++ b/info.plist
@@ -271,6 +271,7 @@
 		<string>FC4117F8-C3AB-4430-8E46-C81F1F00177F</string>
 		<string>0D2FE949-F722-4802-8E99-44BF2516F4A8</string>
 		<string>2B2758A5-B0FD-4203-A8C8-38058E16CC68</string>
+		<string>72D7EC1C-E105-41F3-9D8D-9D48FB3B94DE</string>
 		<string>C82DAAA6-61CF-4A30-977F-5A1986F8EF04</string>
 		<string>4C3F139B-D57D-4595-B6FA-8D5F7919148A</string>
 		<string>0412E351-735A-4D11-8089-66D70843CA3F</string>
